# x-win

./: .config  .gitattributes  .gitignore  .npmignore  .yarnrc.yml  Cargo.toml  Dockerfile  LICENSE  README.md  index.d.ts  index.js  package-lock.json  package.json
.cargo/: config.toml
.github/: FUNDING.yml  docker-install-deps.sh  docker-ubuntu-install.sh  docker-ubuntu-rust-install.sh  dokcer-install-deps.sh  download-firefox.sh
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: CI.yml  ci-napi.yml  ci-rs.yml  lint.yml
.husky/: pre-commit
.scripts/: before-publish.cjs  cleanup-package.cjs
__test__/: index.spec.mjs  index.spec.ts  package-lock.json  package.json
benchmark/: bench.ts  package-lock.json  package.json  tsconfig.json
docker/: debian-aarch64.Dockerfile  debian.Dockerfile
npm/darwin-arm64/: README.md  package.json
npm/darwin-universal/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/linux-arm64-gnu/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/linux-x64-musl/: README.md  package.json
npm/win32-arm64-msvc/: README.md  package.json
npm/win32-ia32-msvc/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
src/: error.rs  lib.rs
src/common/: api.rs  mod.rs  thread.rs
src/common/x_win_struct/: icon_info.rs  mod.rs  process_info.rs  usage_info.rs  window_info.rs  window_position.rs
src/linux/: api.rs  mod.rs
src/linux/api/: common_api.rs  gnome_shell.rs  gnome_shell_extension.rs  wayland_api.rs  wayland_eval_api.rs  wayland_extension45_api.rs  wayland_extension_api.rs  wayland_new_api.rs  x11_api.rs
src/macos/: api.rs  application_services.rs  mod.rs
src/win32/: api.rs  mod.rs
x-win-rs/: Cargo.toml  README.md
x-win-rs/.cargo/: config.toml
x-win-rs/examples/: get_active_window.rs  get_browser_url.rs  get_open_windows.rs  get_window_icon.rs  subscribe_active_window.rs
x-win-rs/src/: lib.rs
x-win-rs/src/common/: api.rs  mod.rs  result.rs
x-win-rs/src/common/x_win_struct/: icon_info.rs  mod.rs  process_info.rs  usage_info.rs  window_info.rs  window_position.rs
x-win-rs/src/linux/: api.rs  mod.rs
x-win-rs/src/linux/api/: common_api.rs  gnome_shell.rs  wayland_api.rs  wayland_eval_api.rs  wayland_extension_api.rs  x11_api.rs
x-win-rs/src/macos/: api.rs  mod.rs  permission.rs
x-win-rs/src/win32/: api.rs  mod.rs
