[package]
edition = "2021"
name = "x-win-napi"
version = "0.0.0"
authors = ["BENKHADRA Hocine <miniben90@hotmail.com>"]
keywords = ["window", "active", "current", "position", "open"]
description = "This package allows you to retrieve precise information about active and open windows on Windows, MacOS, and Linux. You can obtain the position, size, title, and other memory of windows."
repository = "https://github.com/miniben-90/x-win"
license = "MIT"
rust-version = "1.60.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.16.13", default-features = false, features = [
  "napi4",
  "async",
] }
napi-derive = "2.16.12"
once_cell = "1.20.2"
base64 = "0.22.1"
x-win = { path = "./x-win-rs" }

[build-dependencies]
napi-build = "2.1.3"

[profile.release]
lto = true
panic = "abort"
