[package]
edition = "2021"
name = "x-win"
version = "0.0.0"
authors = ["BENKHADRA Hocine <miniben90@hotmail.com>"]
keywords = ["window", "active", "current", "position", "open"]
description = "This package allows you to retrieve precise information about active and open windows on Windows, MacOS, and Linux. You can obtain the position, size, title, and other memory of windows."
repository = "https://github.com/miniben-90/x-win"
license = "MIT"

[lib]
name = "x_win"
path = "src/lib.rs"

[dependencies]
once_cell = "1.19.0"
base64 = "0.22.1"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58.0", features = [
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging",
  "Win32_System_Threading",
  "Win32_Storage_FileSystem",
  "Win32_System_ProcessStatus",
  "Win32_System_StationsAndDesktops",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_Graphics_Dwm",
  "UI_UIAutomation",
  "Win32_System_Com",
  "Win32_UI_Accessibility",
  "Win32_System_Ole",
  "Win32_UI_Shell_PropertiesSystem",
  "Win32_UI_Shell_Common",
  "Win32_System_Variant",
  "Win32_Graphics_Gdi",
  "Win32_Graphics_Imaging",
] }
png = "0.17.13"

[target.'cfg(target_os = "linux")'.dependencies]
xcb = { version = "1.4.0" }
x11 = { version = "2.21.0", features = ["xlib"], optional = true }
zbus = { version = "1.9.2" }
serde_json = { version = "1.0.128" }
image = "0.25.2"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26.0"
libc = "0.2.159"
cocoa-foundation = "0.2.0"
core-foundation = "0.10.0"
core-foundation-sys = "0.8.7"
core-graphics = "0.24.0"
objc = "0.2.7"
