[package]
authors      = ["BENKHADRA Hocine <miniben90@hotmail.com>"]
description  = "This package allows you to retrieve precise information about active and open windows on Windows, MacOS, and Linux. You can obtain the position, size, title, and other memory of windows."
edition      = "2021"
keywords     = ["window", "active", "current", "position", "open"]
license      = "MIT"
name         = "x-win"
repository   = "https://github.com/miniben-90/x-win/tree/main/x-win-rs"
rust-version = "1.60.0"
version      = "0.0.0"

[lib]
name = "x_win"
path = "src/lib.rs"

[features]
default          = []
macos_permission = []

[dependencies]
base64    = "0.22.1"
once_cell = "1.21.3"

[target.'cfg(target_os = "windows")'.dependencies]
png = "0.18.0"
windows = { version = "0.62.0", features = [
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging",
  "Win32_System_Threading",
  "Win32_Storage_FileSystem",
  "Win32_System_ProcessStatus",
  "Win32_System_StationsAndDesktops",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_Graphics_Dwm",
  "UI_UIAutomation",
  "Win32_System_Com",
  "Win32_UI_Accessibility",
  "Win32_System_Ole",
  "Win32_UI_Shell_PropertiesSystem",
  "Win32_UI_Shell_Common",
  "Win32_System_Variant",
  "Win32_Graphics_Gdi",
  "Win32_Graphics_Imaging",
] }

[target.'cfg(target_os = "linux")'.dependencies]
image      = "0.25.8"
serde_json = { version = "1.0.145" }
x11        = { version = "2.21.0", features = ["xlib"], optional = true }
xcb        = { version = "1.6.0" }
zbus       = { version = "5.12.0" }

[target.'cfg(target_os = "macos")'.dependencies]
block2 = "0.6.2"
objc2 = { version = "0.6.3" }
objc2-app-kit = { version = "0.3.2", features = [
  "NSImage",
  "NSRunningApplication",
  "NSWorkspace",
  "NSBitmapImageRep",
  "NSImageRep",
  "NSScreen",
] }
objc2-core-foundation = { version = "0.3.2" }
objc2-core-graphics = { version = "0.3.2" }
objc2-foundation = { version = "0.3.2", features = [
  "NSArray",
  "NSString",
  "NSGeometry",
  "NSProcessInfo",
] }

[profile.release]
lto   = true
panic = "abort"
